--- a/Tempo2/CommonCommandBar.xaml
+++ b/Tempo2/CommonCommandBar.xaml
@@ -1,5 +1,3 @@
-<!-- Copyright (c) Microsoft Corporation. All rights reserved. -->
-<!-- Licensed under the MIT License. See LICENSE in the project root for license information. -->
 
 <UserControl
     x:Class="Tempo.CommonCommandBar"
@@ -72,6 +70,14 @@
                                 <KeyboardAccelerator Modifiers="Control,Shift" Key="D" />
                             </MenuFlyoutItem.KeyboardAccelerators>
                         </MenuFlyoutItem>
+
+                        <MenuFlyoutSeparator/>
+                        <ToggleMenuFlyoutItem Text="Show doc pane"
+                                              IsChecked="{x:Bind local:App.Instance.ShowingDocPage, Mode=TwoWay}">
+                            <ToggleMenuFlyoutItem.Icon>
+                                <SymbolIcon Symbol="DockBottom"/>
+                            </ToggleMenuFlyoutItem.Icon>
+                        </ToggleMenuFlyoutItem>
                     </MenuFlyout>
                 </AppBarButton.Flyout>
             </AppBarButton>
