--- a/Tempo2/HomePage.xaml
+++ b/Tempo2/HomePage.xaml
@@ -202,11 +202,8 @@
                         <StackPanel>
                             <TextBlock x:Name="_win32ScopeLabel">Win<Underline>3</Underline>2</TextBlock>
                             <TextBlock Margin="0,10,0,0"  TextWrapping="Wrap" >
-                                Search the Win32 API, downloading it from nuget.org<LineBreak/>
-                                Note that this uses the <Hyperlink NavigateUri="https://github.com/microsoft/win32metadata">Win32 Metadata project</Hyperlink>,
-                                which is a metadata representation of the Win32 API and is the source for language projections such as
-                                <Hyperlink NavigateUri="https://github.com/microsoft/CsWin32">CSWin32</Hyperlink> (C#)
-                                and <Hyperlink NavigateUri="https://github.com/microsoft/windows-rs">windows-rs</Hyperlink> (Rust)
+                                Search the Win32 API (using the
+                                <Hyperlink NavigateUri="https://github.com/microsoft/win32metadata">Win32 Metadata project</Hyperlink>)
                             </TextBlock>
                         </StackPanel>
                     </RadioButton>
